package caroneiros.domain.models;



public enum CarpoolStatus {
    PENDING,CONFIRMED,CANCELLED
}