@startuml diagram 

class AppUser {
    - id: Long
    - name: String 
    - cpf: String 
    - phone: String 
    - bio: String
    - isDriver: Boolean
}

class Vehicle{
    - id: Long 
    - licensePlate: String
    - model: String
    - color: String
}

class Carpool {
    - id: Long
    - estimatedDeparture: LocalDateTime
    - estimatedArrival: LocalDateTime
    - estimadedPrice: Double
    - seatsAvailable: Integer
}

class CarpoolReservation{
    -id: Long
}

enum CarpoolStatus{
     +PENDING: int
     +CONFIRMED:int 
     +CANCELLED:int
}

class Review{
    -id: Long
    -score: int
    -description: String
}

AppUser "1" --> "0,*" Vehicle
Carpool "*" --> "1"  AppUser

CarpoolReservation "*" --> "1" AppUser
CarpoolReservation "*" --> "1" Carpool
CarpoolReservation "*" --> "1" CarpoolStatus

Review "*" --> "1" AppUser : driver
Review "*" --> "1" AppUser : passenger
@enduml
